high level execution of ideas
